[package]
name = "tracking-viewer"
version = "0.1.0"
authors = ["klaxa <klaxa1337@googlemail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.0"
chrono = "0.4.31"
rusqlite = "0.29.0"
clap = { version = "4.4.6", features = ["derive"] }
rand = "0.8"
lazy_static = "1.4.0"

[build-dependencies]
slint-build = "1.0"
